# tmpemail

inbucket/: go.mod  go.sum
inbucket/cmd/inbucket/: main.go
inbucket/pkg/config/: config.go
inbucket/pkg/storage/: test.html
inbucket/pkg/storage/mysql/: message.go  storage.go
tmpmailwebserver/: Cargo.toml
tmpmailwebserver/src/: db.rs  mail.rs  main.rs  static_files.rs
tmpmailwebserver/static/: app.js  config.js  detail.html  detail.js  index.html
tmpmailwebserver/static/ar/: index.html
tmpmailwebserver/static/de/: index.html
tmpmailwebserver/static/en/: index.html
tmpmailwebserver/static/es/: index.html
tmpmailwebserver/static/fr/: index.html
tmpmailwebserver/static/hi/: index.html
tmpmailwebserver/static/ja/: index.html
tmpmailwebserver/static/ko/: index.html
tmpmailwebserver/static/pt-BR/: index.html
tmpmailwebserver/static/pt-PT/: index.html
tmpmailwebserver/static/ru/: index.html
tmpmailwebserver/static/zh/: index.html
tmpmailwebserver/static/zh-HK/: index.html
tmpmailwebserver/static/zh-TW/: index.html
