[package]
name = "tempemailserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
mail-parser = "0.10.2"
mailparse = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
mailin = "0.6"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
once_cell = "1.18"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
rust-embed = "6.8"
mime_guess = "2.0"
clap = { version = "4.4", features = ["derive"] }